LibraryManagemant/src/objects/MemberID__c.object
<CustomObject>
    <fields>
        <fullName>Borrowed_Books__c</fullName>
        <label>Borrowed Books</label>
        <summaryFilterItems>
            <field>Borrow__c.Borrowed_Books__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Borrow__c.MemberID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMAIL__c</fullName>
        <label>EMAIL</label>
        <length>22</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NAME__c</fullName>
        <label>NAME</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Books__c</fullName>
        <label>Required Books</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Books__c</fullName>
        <label>Return Books</label>
        <summaryForeignKey>Borrow__c.MemberID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>MemberID</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{000}</displayFormat>
        <label>MemberID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MemberID</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NumOfBooks</fullName>
        <active>true</active>
        <errorConditionFormula>Required_Books__c  &gt;= 4</errorConditionFormula>
        <errorMessage>One member takes 3 books only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>limit_borrow_books</fullName>
        <active>true</active>
        <errorConditionFormula>Borrowed_Books__c   &gt;  4</errorConditionFormula>
        <errorMessage>Already 3 books was Borrowed(limit)</errorMessage>
    </validationRules>
</CustomObject>